--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html lang="en">
-
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Code Blast | Ashish Kumbhar | Portfolio
+    <title>Ashish Kumbhar - Portfolio
     </title>
     <!-- General SEO Meta Tags -->
-    <meta name="description" content="Welcome to the portfolio of Ashish Kumbhar, a Web Developer. Explore my projects, skills, and experience in Web Development of  [specific areas of expertise].">
+    <meta name="description" content="Welcome to the portfolio of Ashish Kumbhar, a Web Developer. Explore my projects, skills, and experience in Web Development of  PHP/Laravel.">
     <meta name="keywords" content="Ashish Kumbhar, Portfolio, Web Development, PHP/Laravel and JavaScript/Nodejs, Code Blast">
     <meta name="author" content="Ashish Kumbhar">
 
@@ -68,7 +67,7 @@
         <div class="container mx-auto px-4 flex flex-col md:flex-row items-center">
             <div class="md:w-1/2">
                 <h1 class="text-4xl md:text-5xl font-bold mb-4">
-                    Full Stack Web Developer
+                    Ashish Kumbhar
                 </h1>
                 <p class="text-lg mb-6">
                     Specializing in PHP/Laravel
