--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <body class="font-roboto bg-gray-100 text-gray-900">
     <!-- Navbar -->
-    <nav class="bg-white shadow-md">
+    <nav class="sticky top-0 z-50 bg-white shadow-md">
         <div class="container mx-auto px-4 py-2 flex justify-between items-center">
             <a class="text-2xl font-bold text-gray-800" href="#">
                 Code Blast
