--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     <footer class="bg-white py-6">
         <div class="container mx-auto px-4 text-center">
             <p class="text-gray-600">
-                © <span id="year"></span> My Portfolio. All rights reserved.
+                © <span id="year"></span> Code Blast. All rights reserved.
             </p>
             <div class="mt-4 space-x-4">
                 <a class="text-gray-600 hover:text-gray-800" href="#">
