--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,4 @@
 <html lang="en">
-
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -61,37 +60,24 @@
             </div>
         </div>
     </nav>
-
-    <!-- Contact Section -->
-    <section class="bg-gray-100 py-20" id="contact">
+    <!-- About Section -->
+    <section class="bg-gray-100 py-20" id="about">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-bold mb-6 text-center">
-                Contact Me
+                About Me
             </h2>
-            <div class="max-w-lg mx-auto bg-white p-8 rounded-lg shadow-lg">
-                <form action="#" method="POST">
-                    <div class="mb-4">
-                        <label class="block text-gray-700 font-bold mb-2" for="name">
-                            Name
-                        </label>
-                        <input class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" id="name" name="name" required="" type="text" />
-                    </div>
-                    <div class="mb-4">
-                        <label class="block text-gray-700 font-bold mb-2" for="email">
-                            Email
-                        </label>
-                        <input class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" id="email" name="email" required="" type="email" />
-                    </div>
-                    <div class="mb-4">
-                        <label class="block text-gray-700 font-bold mb-2" for="message">
-                            Message
-                        </label>
-                        <textarea class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" id="message" name="message" required="" rows="4"></textarea>
-                    </div>
-                    <button class="w-full bg-blue-500 text-white px-6 py-3 rounded-md hover:bg-blue-600" type="submit">
-                        Send Message
-                    </button>
-                </form>
+            <div class="flex flex-col md:flex-row items-center">
+                <div class="md:w-1/2">
+                    <img alt="Portrait of the developer smiling and looking professional" class="rounded-full shadow-lg mb-6 md:mb-0" height="400" src="https://storage.googleapis.com/a1aa/image/FN8MXBeDiO13WyvZVOezezekEzeR1YfhItimF0YbCGo0fSUeTA.jpg" width="400" />
+                </div>
+                <div class="md:w-1/2 md:pl-10">
+                    <p class="text-lg mb-4">
+                        I am a passionate Full Stack Web Developer with expertise in PHP and Laravel. I have a strong background in building dynamic and responsive web applications. My goal is to create seamless user experiences and efficient backend systems.
+                    </p>
+                    <p class="text-lg">
+                        With a keen eye for detail and a commitment to delivering high-quality code, I am always eager to take on new challenges and learn new technologies.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
