--- a/pages/project.html
+++ b/pages/project.html
@@ -28,7 +28,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet" />
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <style>
         html {
             scroll-behavior: smooth;
@@ -44,62 +44,23 @@
     <!-- Navbar -->
     <nav class="sticky top-0 z-50 bg-white shadow-md">
         <div class="container mx-auto px-4 py-2 flex justify-between items-center">
-            <a class="text-2xl font-bold text-gray-800" href="#">
+            <a class="text-2xl font-bold text-gray-800" href="../">
                 Code Blast
             </a>
             <div class="space-x-4">
-                <a class="text-gray-600 hover:text-gray-800" href="./pages/about.html">
+                <a class="text-gray-600 hover:text-gray-800" href="./about.html">
                     About
                 </a>
-                <a class="text-gray-600 hover:text-gray-800" href="./pages/project.html">
+                <a class="text-gray-600 hover:text-gray-800" href="./project.html">
                     Projects
                 </a>
-                <a class="text-gray-600 hover:text-gray-800" href="./pages/contact.html">
+                <a class="text-gray-600 hover:text-gray-800" href="./contact.html">
                     Contact
                 </a>
             </div>
         </div>
     </nav>
-    <!-- Hero Section -->
-    <section class="bg-white py-20">
-        <div class="container mx-auto px-4 flex flex-col md:flex-row items-center">
-            <div class="md:w-1/2">
-                <h1 class="text-4xl md:text-5xl font-bold mb-4">
-                    Ashish Kumbhar
-                </h1>
-                <p class="text-lg mb-6">
-                    Specializing in PHP/Laravel
-                </p>
-                <a class="bg-blue-500 text-white px-6 py-3 rounded-md hover:bg-blue-600" href="#projects">
-                    View My Work
-                </a>
-            </div>
-            <div class="md:w-1/2 mt-8 md:mt-0">
-                <img alt="Illustration of a full stack web developer working on a laptop with code on the screen" class="rounded-lg shadow-lg" height="400" src="https://storage.googleapis.com/a1aa/image/9wf3inWyTORWBiPnTd3RHxw96NFL9yTyWp8n9TQffUZ5LR5nA.jpg" width="600" />
-            </div>
-        </div>
-    </section>
-    <!-- About Section -->
-    <section class="bg-gray-100 py-20" id="about">
-        <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold mb-6 text-center">
-                About Me
-            </h2>
-            <div class="flex flex-col md:flex-row items-center">
-                <div class="md:w-1/2">
-                    <img alt="Portrait of the developer smiling and looking professional" class="rounded-full shadow-lg mb-6 md:mb-0" height="400" src="https://storage.googleapis.com/a1aa/image/FN8MXBeDiO13WyvZVOezezekEzeR1YfhItimF0YbCGo0fSUeTA.jpg" width="400" />
-                </div>
-                <div class="md:w-1/2 md:pl-10">
-                    <p class="text-lg mb-4">
-                        I am a passionate Full Stack Web Developer with expertise in PHP and Laravel. I have a strong background in building dynamic and responsive web applications. My goal is to create seamless user experiences and efficient backend systems.
-                    </p>
-                    <p class="text-lg">
-                        With a keen eye for detail and a commitment to delivering high-quality code, I am always eager to take on new challenges and learn new technologies.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
+
     <!-- Projects Section -->
     <section class="bg-white py-20" id="projects">
         <div class="container mx-auto px-4">
@@ -188,39 +149,7 @@
             </div>
         </div>
     </section>
-    <!-- Contact Section -->
-    <section class="bg-gray-100 py-20" id="contact">
-        <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold mb-6 text-center">
-                Contact Me
-            </h2>
-            <div class="max-w-lg mx-auto bg-white p-8 rounded-lg shadow-lg">
-                <form action="#" method="POST">
-                    <div class="mb-4">
-                        <label class="block text-gray-700 font-bold mb-2" for="name">
-                            Name
-                        </label>
-                        <input class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" id="name" name="name" required="" type="text" />
-                    </div>
-                    <div class="mb-4">
-                        <label class="block text-gray-700 font-bold mb-2" for="email">
-                            Email
-                        </label>
-                        <input class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" id="email" name="email" required="" type="email" />
-                    </div>
-                    <div class="mb-4">
-                        <label class="block text-gray-700 font-bold mb-2" for="message">
-                            Message
-                        </label>
-                        <textarea class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" id="message" name="message" required="" rows="4"></textarea>
-                    </div>
-                    <button class="w-full bg-blue-500 text-white px-6 py-3 rounded-md hover:bg-blue-600" type="submit">
-                        Send Message
-                    </button>
-                </form>
-            </div>
-        </div>
-    </section>
+
     <!-- Footer -->
     <footer class="bg-white py-6">
         <div class="container mx-auto px-4 text-center">
@@ -248,6 +177,6 @@
         </div>
     </footer>
 
-    <script src="./js/main.js" defer></script>
+    <script src="../js/main.js" defer></script>
 </body>
 </html>
